# bitGradient

./: README.md
.github/workflows/: ci.yml
bitgradient/: Cargo.toml
bitgradient/benches/: dgd.rs
bitgradient/src/: lib.rs
bitrag-core/: Cargo.toml
bitrag-core/src/: bitset.rs  corpus.rs  eval.rs  fonts.rs  gold_cycle.rs  idf.rs  iso.rs  lib.rs  matrix.rs  ngram.rs  nibble4_tokenizer.rs  nibble_hash.rs  object_capsule.rs  sign2.rs
docs/: LLMless修正提案_概要原理実装結果.md  MATH_FOUNDATIONS.md  THEORY_CORE_v1.md  THEORY_EVIDENCE_LEDGER.md  THEORY_FORMALIZATION.md  THEORY_LINEAGE.md  THEORY_NAND_COMPLETENESS.md  THEORY_RUST_CODEGEN.md
experiments/: EXPERIMENTS.md  EXPERIMENTS_SUMMARY.md  OODA_history.json  OODAテンプレート.md  REPORT_ensemble29.md
methods/: COMPONENT_CATALOG.md  TOOLS_CATALOG.md
methods/EXPERIMENT_TEMPLATE/: README.md  conditions.md  experiment-class.md  novelHypothesis.md  novelKnowledge.md  result.md  run.sh  wasteHypothesis.md  仮説.md
