[package]
name = "bitgradient"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "LLM-less Discrete Gradient Descent (DGD): bit-flip local search with integer loss. Corollary 4 of the bitRAG main theorem (MAIN-B)."
repository = "https://github.com/chikaharu/bitGradient"
homepage = "https://github.com/chikaharu/bitGradient"
readme = "README.md"
keywords = ["dgd", "bit-flip", "local-search", "optimization", "bitrag"]
categories = ["algorithms", "science"]

[lib]
name = "bitgradient"
path = "src/lib.rs"

[[bench]]
name = "dgd"
harness = false

[profile.release]
opt-level = 3
lto = true
